@@ -45,6 +45,9 @@ class BigInt
         explicit BigInt(BIGNUM const &bignum);  // 2 
         explicit BigInt(BIGNUM const *bignum);  // 4
 
+        BigInt(char const *bigEndian, size_t length);       // 5
+        explicit BigInt(std::string const &bigEndian);      // 6
+
         ~BigInt();
 
         BigInt &operator=(BigInt const &other);
@@ -99,7 +102,7 @@ class BigInt
         };
 
         char *bigEndian() const;
-
+        
         BigInt &operator+=(BigInt const &rhs);
         BigInt &addMod(BigInt const &rhs, BigInt const &mod);
         BigInt addModc(BigInt const &rhs, BigInt const &mod) const;
