@@ -3,17 +3,22 @@
 size_t DiffieHellman::check(BigInt const &primeParam, 
                             BigInt const &generatorParam)
 {
-    struct dh_st dhStruct;
+    DH *dh = newDH();
 
     BigInt prime(primeParam);
     BigInt generator(generatorParam);
 
-    dhStruct.p = const_cast<BIGNUM *>(&prime.bignum());
-    dhStruct.g = const_cast<BIGNUM *>(&generator.bignum());
+    dh->p = const_cast<BIGNUM *>(&prime.bignum());
+    dh->g = const_cast<BIGNUM *>(&generator.bignum());
 
     int ret;
 
-    return DH_check(&dhStruct, &ret) ? ret : CHECK_FAILS;
+    if (DH_check(dh, &ret) == 0) 
+        ret = CHECK_FAILS;
+
+    DH_free(dh);
+
+    return ret;
 }
 
 
