@@ -1,8 +1,9 @@
 #include "diffiehellman"
 
+#include <sstream>
+
 #include <bobcat/exception>
 #include <bobcat/mstream>
-#include <bobcat/bigint>
 
 using namespace std;
 using namespace FBB;
