@@ -15,8 +15,10 @@ bobcat (3.15.00)
     std::streambuf. 
 
   * Added class DiffieHellman, implementing Diffie-Hellman shared secret
-    computations 
+    computations.
 
+  * Added new constructors to BigInt initializing BigInt values from a series
+    of characters or from a std::string.
 
 bobcat (3.14.00)
 
